# lightwrite

./: .gitignore  LICENSE  Makefile  Makefile.am  README.md  autogen.sh  cleanup.sh  configure.ac
.github/workflows/: build.yml
data/: Makefile.am
src/: Makefile.am  buffer.c  buffer.h  filemanager.c  filemanager.h  font.c  font.h  keybinds.c  keybinds.h  lassert.c  lassert.h  logger.c  logger.h  main.c
