MAINTAINERCLEANFILES = \
					  Makefile.in \
					  ABOUT-NLS* \
					  Makefile.in \
					  aclocal.m4 \
					  compile \
					  config.guess \
					  config.h.in \
					  config.h.in~ \
					  config.rpath \
					  config.sub \
					  configure \
					  depcomp \
					  install-sh \
					  ltmain.sh \
					  missing

SUBDIRS = src data
